--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="image">
-        <img src="https://miro.medium.com/v2/resize:fit:1400/format:webp/1*DMEPtaZPmIjdwALQSbMcaA.jpeg" alt="">
+        <img src="https://img.freepik.com/free-photo/medium-shot-contemplative-man-seaside_23-2150531618.jpg?w=996&t=st=1710856019~exp=1710856619~hmac=fbec25d146999700c5f92c571cfff47af013d8661e871e15e454960a36242c9f" alt="">
         <div class="text">
             <h2>James</h2>
             <a href="" class="btn">More Info</a>
